--- a/containers/tomcat-7/.classpath
+++ b/containers/tomcat-7/.classpath
@@ -12,14 +12,26 @@
       <attribute value="jar:file:/home/jean/.m2/repository/javax/sip/jain-sip-ri/1.2.X-SNAPSHOT/jain-sip-ri-1.2.X-SNAPSHOT-javadoc.jar!/" name="javadoc_location"/>
     </attributes>
   </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/javax/transaction/jta/1.1/jta-1.1.jar"/>
   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-  <classpathentry kind="src" path="/sip-servlets-spec"/>
   <classpathentry kind="src" path="/sip-servlets-impl"/>
+  <classpathentry kind="src" path="/sip-servlets-spec"/>
   <classpathentry kind="src" path="/sip-servlets-core-api"/>
   <classpathentry kind="src" path="/sip-servlets-jruby"/>
   <classpathentry kind="src" path="/sip-servlets-client"/>
   <classpathentry kind="src" path="/sip-servlets-annotations"/>
+  <classpathentry kind="src" path="/sip-servlets-catalina-7"/>
+  <classpathentry kind="var" path="M2_REPO/org/mobicents/javax/sip/mobicents-jain-sip-ext/1.3.0-SNAPSHOT/mobicents-jain-sip-ext-1.3.0-SNAPSHOT.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/mobicents/tools/sip-balancer-jar/1.7.0-SNAPSHOT/sip-balancer-jar-1.7.0-SNAPSHOT.jar"/>
+  <classpathentry kind="var" path="M2_REPO/io/netty/netty/3.6.5.Final/netty-3.6.5.Final.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/jboss/cache/jbosscache-core/3.1.0.GA/jbosscache-core-3.1.0.GA.jar"/>
+  <classpathentry kind="var" path="M2_REPO/jgroups/jgroups/2.6.10.GA/jgroups-2.6.10.GA.jar"/>
+  <classpathentry kind="var" path="M2_REPO/commons-logging/commons-logging/1.0.4/commons-logging-1.0.4.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/jboss/jboss-common-core/2.2.14.GA/jboss-common-core-2.2.14.GA.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/jboss/logging/jboss-logging-spi/2.1.0.GA/jboss-logging-spi-2.1.0.GA.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/jboss/cache/jbosscache-pojo/3.0.0.GA/jbosscache-pojo-3.0.0.GA.jar"/>
   <classpathentry kind="var" path="M2_REPO/log4j/log4j/1.2.17/log4j-1.2.17.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/sun/jdmk/jmxtools/1.2.1/jmxtools-1.2.1.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/apache/tomcat/tomcat-catalina/7.0.50/tomcat-catalina-7.0.50.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/apache/tomcat/tomcat-servlet-api/7.0.50/tomcat-servlet-api-7.0.50.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/apache/tomcat/tomcat-juli/7.0.50/tomcat-juli-7.0.50.jar"/>
@@ -27,9 +39,7 @@
   <classpathentry kind="var" path="M2_REPO/org/apache/tomcat/tomcat-api/7.0.50/tomcat-api-7.0.50.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/apache/tomcat/tomcat-util/7.0.50/tomcat-util-7.0.50.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/apache/tomcat/tomcat-coyote/7.0.50/tomcat-coyote-7.0.50.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/mobicents/ha/javax/sip/mobicents-jain-sip-ha-core/1.5.0-SNAPSHOT/mobicents-jain-sip-ha-core-1.5.0-SNAPSHOT.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/mobicents/javax/sip/mobicents-jain-sip-ext/1.3.0-SNAPSHOT/mobicents-jain-sip-ext-1.3.0-SNAPSHOT.jar"/>
-  <classpathentry kind="var" path="M2_REPO/net/java/stun4j/stun4j/1.0.MOBICENTS/stun4j-1.0.MOBICENTS.jar"/>
+  <classpathentry kind="var" path="M2_REPO/geronimo-spec/geronimo-spec-j2ee-jacc/1.0-rc4/geronimo-spec-j2ee-jacc-1.0-rc4.jar"/>
   <classpathentry kind="var" path="M2_REPO/junit/junit/3.8.1/junit-3.8.1.jar"/>
   <classpathentry kind="var" path="M2_REPO/javax/javaee-web-api/6.0/javaee-web-api-6.0.jar"/>
 </classpath>
