--- a/sip-servlets-test-suite/applications/distributable-servlet/.project
+++ b/sip-servlets-test-suite/applications/distributable-servlet/.project
@@ -1,13 +1,14 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
   <name>distributable-servlet</name>
   <comment>Mobicents SIP Servlets. NO_M2ECLIPSE_SUPPORT: Project files created with the maven-eclipse-plugin are not supported in M2Eclipse.</comment>
   <projects>
-    <project>sip-servlets-annotations</project>
-    <project>sip-servlets-client</project>
-    <project>sip-servlets-core-api</project>
-    <project>sip-servlets-impl</project>
-    <project>sip-servlets-jruby</project>
     <project>sip-servlets-spec</project>
+    <project>sip-servlets-impl</project>
+    <project>sip-servlets-core-api</project>
+    <project>sip-servlets-jruby</project>
+    <project>sip-servlets-client</project>
+    <project>sip-servlets-annotations</project>
   </projects>
   <buildSpec>
     <buildCommand>
