--- a/sip-servlets-test-suite/testsuite/.classpath
+++ b/sip-servlets-test-suite/testsuite/.classpath
@@ -1,69 +1,70 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <classpath>
   <classpathentry kind="src" path="src/test/java" output="target/test-classes" including="**/*.java"/>
   <classpathentry kind="src" path="src/test/resources" output="target/test-classes" excluding="**/*.java"/>
   <classpathentry kind="src" path="src/main/java" including="**/*.java"/>
   <classpathentry kind="output" path="target/classes"/>
-  <classpathentry kind="var" path="M2_REPO/javax/activation/activation/1.1.1/activation-1.1.1.jar" sourcepath="M2_REPO/javax/activation/activation/1.1.1/activation-1.1.1-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/javax/sip/jain-sip-api/1.2.0/jain-sip-api-1.2.0.jar" sourcepath="M2_REPO/javax/sip/jain-sip-api/1.2.0/jain-sip-api-1.2.0-sources.jar">
     <attributes>
       <attribute value="jar:file:/home/jean/.m2/repository/javax/sip/jain-sip-api/1.2.0/jain-sip-api-1.2.0-javadoc.jar!/" name="javadoc_location"/>
     </attributes>
   </classpathentry>
-  <classpathentry kind="var" path="M2_REPO/javax/sip/jain-sip-ri/1.2.169/jain-sip-ri-1.2.169.jar" sourcepath="M2_REPO/javax/sip/jain-sip-ri/1.2.169/jain-sip-ri-1.2.169-sources.jar">
+  <classpathentry kind="var" path="M2_REPO/javax/sip/jain-sip-ri/1.2.X-SNAPSHOT/jain-sip-ri-1.2.X-SNAPSHOT.jar" sourcepath="M2_REPO/javax/sip/jain-sip-ri/1.2.X-SNAPSHOT/jain-sip-ri-1.2.X-SNAPSHOT-sources.jar">
     <attributes>
-      <attribute value="jar:file:/home/jean/.m2/repository/javax/sip/jain-sip-ri/1.2.169/jain-sip-ri-1.2.169-javadoc.jar!/" name="javadoc_location"/>
+      <attribute value="jar:file:/home/jean/.m2/repository/javax/sip/jain-sip-ri/1.2.X-SNAPSHOT/jain-sip-ri-1.2.X-SNAPSHOT-javadoc.jar!/" name="javadoc_location"/>
     </attributes>
   </classpathentry>
-  <classpathentry kind="var" path="M2_REPO/javax/transaction/jta/1.1/jta-1.1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/javax/activation/activation/1.1.1/activation-1.1.1.jar"/>
   <classpathentry kind="var" path="M2_REPO/javax/mail/mail/1.4/mail-1.4.jar" sourcepath="M2_REPO/javax/mail/mail/1.4/mail-1.4-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/cglib/cglib-nodep/2.2/cglib-nodep-2.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/commons-codec/commons-codec/1.5/commons-codec-1.5.jar"/>
-  <classpathentry kind="var" path="M2_REPO/commons-logging/commons-logging/1.1.0.jboss/commons-logging-1.1.0.jboss.jar"/>
+  <classpathentry kind="var" path="M2_REPO/javax/transaction/jta/1.0.1B/jta-1.0.1B.jar"/>
+  <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
+  <classpathentry kind="var" path="M2_REPO/junit/junit/4.8.2/junit-4.8.2.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/mockito/mockito-all/1.8.5/mockito-all-1.8.5.jar"/>
+  <classpathentry kind="src" path="/sip-servlets-spec"/>
+  <classpathentry kind="src" path="/sip-servlets-core-api"/>
+  <classpathentry kind="src" path="/sip-servlets-jruby"/>
+  <classpathentry kind="src" path="/sip-servlets-client"/>
+  <classpathentry kind="src" path="/sip-servlets-annotations"/>
+  <classpathentry kind="src" path="/sip-servlets-catalina-7"/>
+  <classpathentry kind="src" path="/sip-servlets-impl"/>
+  <classpathentry kind="src" path="/sip-servlets-application-router"/>
+  <classpathentry kind="src" path="/sip-servlets-tomcat-7"/>
+  <classpathentry kind="var" path="M2_REPO/geronimo-spec/geronimo-spec-j2ee-jacc/1.0-rc4/geronimo-spec-j2ee-jacc-1.0-rc4.jar"/>
+  <classpathentry kind="var" path="M2_REPO/log4j/log4j/1.2.17/log4j-1.2.17.jar"/>
   <classpathentry kind="var" path="M2_REPO/commons-logging/commons-logging-api/1.0.4/commons-logging-api-1.0.4.jar"/>
   <classpathentry kind="var" path="M2_REPO/concurrent/concurrent/1.3.4/concurrent-1.3.4.jar"/>
-  <classpathentry kind="var" path="M2_REPO/dnsjava/dnsjava/2.1.0/dnsjava-2.1.0.jar" sourcepath="M2_REPO/dnsjava/dnsjava/2.1.0/dnsjava-2.1.0-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/dnsjava/dnsjava/2.0.6/dnsjava-2.0.6.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/eclipse/jdt/core/compiler/ecj/3.7/ecj-3.7.jar"/>
-  <classpathentry kind="var" path="M2_REPO/nl/jqno/equalsverifier/equalsverifier/1.0.1/equalsverifier-1.0.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/geronimo-spec/geronimo-spec-j2ee-jacc/1.0-rc4/geronimo-spec-j2ee-jacc-1.0-rc4.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/tomcat/tomcat-servlet-api/7.0.33/tomcat-servlet-api-7.0.33.jar"/>
-  <classpathentry kind="var" path="M2_REPO/jboss/jboss-cache/1.4.1.SP5/jboss-cache-1.4.1.SP5.jar"/>
+  <classpathentry kind="var" path="M2_REPO/net/java/stun4j/stun4j/1.0.MOBICENTS/stun4j-1.0.MOBICENTS.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/tomcat/tomcat-catalina/7.0.50/tomcat-catalina-7.0.50.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/tomcat/tomcat-servlet-api/7.0.50/tomcat-servlet-api-7.0.50.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/tomcat/tomcat-juli/7.0.50/tomcat-juli-7.0.50.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/tomcat/tomcat-annotations-api/7.0.50/tomcat-annotations-api-7.0.50.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/tomcat/tomcat-api/7.0.50/tomcat-api-7.0.50.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/tomcat/tomcat-util/7.0.50/tomcat-util-7.0.50.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/tomcat/tomcat-coyote/7.0.50/tomcat-coyote-7.0.50.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/tomcat/tomcat-jasper/7.0.50/tomcat-jasper-7.0.50.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/tomcat/tomcat-jsp-api/7.0.50/tomcat-jsp-api-7.0.50.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/tomcat/tomcat-el-api/7.0.50/tomcat-el-api-7.0.50.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/eclipse/jdt/core/compiler/ecj/4.3.1/ecj-4.3.1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/tomcat/tomcat-jasper-el/7.0.50/tomcat-jasper-el-7.0.50.jar"/>
+  <classpathentry kind="var" path="M2_REPO/commons-codec/commons-codec/1.5/commons-codec-1.5.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/cafesip/sipunit/sipunit/2.0.0/sipunit-2.0.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/mobicents/tools/sip-balancer-jar/1.7.0-SNAPSHOT/sip-balancer-jar-1.7.0-SNAPSHOT.jar"/>
+  <classpathentry kind="var" path="M2_REPO/io/netty/netty/3.6.5.Final/netty-3.6.5.Final.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/jboss/cache/jbosscache-core/3.1.0.GA/jbosscache-core-3.1.0.GA.jar"/>
+  <classpathentry kind="var" path="M2_REPO/jgroups/jgroups/2.4.1/jgroups-2.4.1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/commons-logging/commons-logging/1.1.0.jboss/commons-logging-1.1.0.jboss.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/jboss/jboss-common-core/2.2.14.GA/jboss-common-core-2.2.14.GA.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/jboss/logging/jboss-logging-spi/2.1.0.GA/jboss-logging-spi-2.1.0.GA.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/jboss/cache/jbosscache-core/3.1.0.GA/jbosscache-core-3.1.0.GA.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/jboss/cache/jbosscache-pojo/3.0.0.GA/jbosscache-pojo-3.0.0.GA.jar"/>
-  <classpathentry kind="var" path="M2_REPO/jgroups/jgroups/2.4.1/jgroups-2.4.1.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/sun/jdmk/jmxtools/1.2.1/jmxtools-1.2.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/junit/junit/3.8.1/junit-3.8.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/log4j/log4j/1.2.14/log4j-1.2.14.jar" sourcepath="M2_REPO/log4j/log4j/1.2.14/log4j-1.2.14-sources.jar"/>
-  <classpathentry kind="src" path="/mobicents-jain-sip-ext"/>
-  <classpathentry kind="var" path="M2_REPO/org/mobicents/ha/javax/sip/mobicents-jain-sip-ha-core/1.4.0-SNAPSHOT/mobicents-jain-sip-ha-core-1.4.0-SNAPSHOT.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/mobicents/ha/javax/sip/mobicents-jain-sip-jboss4/1.4.0-SNAPSHOT/mobicents-jain-sip-jboss4-1.4.0-SNAPSHOT.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/mockito/mockito-all/1.8.5/mockito-all-1.8.5.jar" sourcepath="M2_REPO/org/mockito/mockito-all/1.8.5/mockito-all-1.8.5-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/jboss/netty/netty/3.1.5.GA/netty-3.1.5.GA.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/mobicents/ha/javax/sip/mobicents-jain-sip-ha-core/1.5.0-SNAPSHOT/mobicents-jain-sip-ha-core-1.5.0-SNAPSHOT.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/mobicents/javax/sip/mobicents-jain-sip-ext/1.3.0-SNAPSHOT/mobicents-jain-sip-ext-1.3.0-SNAPSHOT.jar"/>
+  <classpathentry kind="var" path="M2_REPO/dnsjava/dnsjava/2.1.0/dnsjava-2.1.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/mobicents/ha/javax/sip/mobicents-jain-sip-jboss4/1.5.0-SNAPSHOT/mobicents-jain-sip-jboss4-1.5.0-SNAPSHOT.jar"/>
+  <classpathentry kind="var" path="M2_REPO/jboss/jboss-cache/1.4.1.SP5/jboss-cache-1.4.1.SP5.jar"/>
+  <classpathentry kind="var" path="M2_REPO/nl/jqno/equalsverifier/equalsverifier/1.0.1/equalsverifier-1.0.1.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/objenesis/objenesis/1.1/objenesis-1.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/mobicents/tools/sip-balancer-jar/1.6.0-SNAPSHOT/sip-balancer-jar-1.6.0-SNAPSHOT.jar"/>
-  <classpathentry kind="src" path="/sip-servlets-annotations"/>
-  <classpathentry kind="src" path="/sip-servlets-application-router"/>
-  <classpathentry kind="src" path="/sip-servlets-catalina-7"/>
-  <classpathentry kind="src" path="/sip-servlets-client"/>
-  <classpathentry kind="src" path="/sip-servlets-core-api"/>
-  <classpathentry kind="src" path="/sip-servlets-impl"/>
-  <classpathentry kind="src" path="/sip-servlets-jruby"/>
-  <classpathentry kind="src" path="/sip-servlets-spec"/>
-  <classpathentry kind="src" path="/sip-servlets-tomcat-7"/>
-  <classpathentry kind="lib" path="lib/sipunit.jar"/>
-  <classpathentry kind="var" path="M2_REPO/net/java/stun4j/stun4j/1.0.MOBICENTS/stun4j-1.0.MOBICENTS.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/tomcat/tomcat-annotations-api/7.0.33/tomcat-annotations-api-7.0.33.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/tomcat/tomcat-api/7.0.33/tomcat-api-7.0.33.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/tomcat/tomcat-catalina/7.0.33/tomcat-catalina-7.0.33.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/tomcat/tomcat-coyote/7.0.33/tomcat-coyote-7.0.33.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/tomcat/tomcat-el-api/7.0.33/tomcat-el-api-7.0.33.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/tomcat/tomcat-jasper/7.0.33/tomcat-jasper-7.0.33.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/tomcat/tomcat-jasper-el/7.0.33/tomcat-jasper-el-7.0.33.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/tomcat/tomcat-jsp-api/7.0.33/tomcat-jsp-api-7.0.33.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/tomcat/tomcat-juli/7.0.33/tomcat-juli-7.0.33.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/tomcat/tomcat-servlet-api/7.0.33/tomcat-servlet-api-7.0.33.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/tomcat/tomcat-util/7.0.33/tomcat-util-7.0.33.jar"/>
-  <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
+  <classpathentry kind="var" path="M2_REPO/cglib/cglib-nodep/2.2/cglib-nodep-2.2.jar"/>
+  <classpathentry kind="var" path="M2_REPO/javax/javaee-web-api/6.0/javaee-web-api-6.0.jar"/>
 </classpath>
