--- a/sip-servlets-test-suite/testsuite/.project
+++ b/sip-servlets-test-suite/testsuite/.project
@@ -1,16 +1,16 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
   <name>sip-servlets-test-suite</name>
   <comment>Mobicents SIP Servlets. NO_M2ECLIPSE_SUPPORT: Project files created with the maven-eclipse-plugin are not supported in M2Eclipse.</comment>
   <projects>
-    <project>mobicents-jain-sip-ext</project>
-    <project>sip-servlets-annotations</project>
-    <project>sip-servlets-application-router</project>
-    <project>sip-servlets-catalina-7</project>
-    <project>sip-servlets-client</project>
-    <project>sip-servlets-core-api</project>
-    <project>sip-servlets-impl</project>
-    <project>sip-servlets-jruby</project>
     <project>sip-servlets-spec</project>
+    <project>sip-servlets-core-api</project>
+    <project>sip-servlets-jruby</project>
+    <project>sip-servlets-client</project>
+    <project>sip-servlets-annotations</project>
+    <project>sip-servlets-catalina-7</project>
+    <project>sip-servlets-impl</project>
+    <project>sip-servlets-application-router</project>
     <project>sip-servlets-tomcat-7</project>
   </projects>
   <buildSpec>
