--- a/containers/sip-servlets-as7-drop-in/jboss-as-mobicents/.classpath
+++ b/containers/sip-servlets-as7-drop-in/jboss-as-mobicents/.classpath
@@ -5,16 +5,8 @@
   <classpathentry kind="output" path="target/classes"/>
   <classpathentry kind="var" path="M2_REPO/javax/validation/validation-api/1.0.0.GA/validation-api-1.0.0.GA.jar"/>
   <classpathentry kind="var" path="M2_REPO/javax/transaction/jta/1.1/jta-1.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/javax/sip/jain-sip-api/1.2.0/jain-sip-api-1.2.0.jar" sourcepath="M2_REPO/javax/sip/jain-sip-api/1.2.0/jain-sip-api-1.2.0-sources.jar">
-    <attributes>
-      <attribute value="jar:file:/home/jean/.m2/repository/javax/sip/jain-sip-api/1.2.0/jain-sip-api-1.2.0-javadoc.jar!/" name="javadoc_location"/>
-    </attributes>
-  </classpathentry>
-  <classpathentry kind="var" path="M2_REPO/javax/sip/jain-sip-ri/1.2.X-SNAPSHOT/jain-sip-ri-1.2.X-SNAPSHOT.jar" sourcepath="M2_REPO/javax/sip/jain-sip-ri/1.2.X-SNAPSHOT/jain-sip-ri-1.2.X-SNAPSHOT-sources.jar">
-    <attributes>
-      <attribute value="jar:file:/home/jean/.m2/repository/javax/sip/jain-sip-ri/1.2.X-SNAPSHOT/jain-sip-ri-1.2.X-SNAPSHOT-javadoc.jar!/" name="javadoc_location"/>
-    </attributes>
-  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/javax/sip/jain-sip-api/1.2.0/jain-sip-api-1.2.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/javax/sip/jain-sip-ri/7.0.2.GA-TelScale/jain-sip-ri-7.0.2.GA-TelScale.jar"/>
   <classpathentry kind="var" path="M2_REPO/javax/activation/activation/1.1.1/activation-1.1.1.jar"/>
   <classpathentry kind="var" path="M2_REPO/javax/mail/mail/1.4.6/mail-1.4.6.jar"/>
   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
@@ -46,7 +38,7 @@
   <classpathentry kind="var" path="M2_REPO/org/jboss/as/jboss-as-process-controller/7.2.0.Final/jboss-as-process-controller-7.2.0.Final.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/jboss/as/jboss-as-version/7.2.0.Final/jboss-as-version-7.2.0.Final.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/jboss/logmanager/jboss-logmanager/1.0.0.GA/jboss-logmanager-1.0.0.GA.jar"/>
-  <classpathentry kind="lib" path="/home/jean/java/jdk1.6.0_43/lib/tools.jar"/>
+  <classpathentry kind="lib" path="/usr/lib/jvm/java-7-openjdk-amd64/lib/tools.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/jboss/as/jboss-as-remoting/7.2.0.Final/jboss-as-remoting-7.2.0.Final.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/jboss/as/jboss-as-network/7.2.0.Final/jboss-as-network-7.2.0.Final.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/jboss/jandex/1.0.3.Final/jandex-1.0.3.Final.jar"/>
@@ -102,7 +94,7 @@
   <classpathentry kind="var" path="M2_REPO/org/jboss/as/jboss-as-security/7.2.0.Final/jboss-as-security-7.2.0.Final.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/jboss/security/jboss-negotiation-extras/2.2.2.Final/jboss-negotiation-extras-2.2.2.Final.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/jboss/security/jboss-negotiation-common/2.2.2.Final/jboss-negotiation-common-2.2.2.Final.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/jboss/web/jbossweb/7.2.0.Final/jbossweb-7.2.0.Final.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/jboss/web/jbossweb/7.3.0.Final/jbossweb-7.3.0.Final.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/picketbox/picketbox-commons/1.0.0.final/picketbox-commons-1.0.0.final.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/jboss/security/jboss-negotiation-spnego/2.2.2.Final/jboss-negotiation-spnego-2.2.2.Final.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/jboss/spec/javax/security/jacc/jboss-jacc-api_1.4_spec/1.0.2.Final/jboss-jacc-api_1.4_spec-1.0.2.Final.jar"/>
@@ -118,12 +110,17 @@
   <classpathentry kind="src" path="/sip-servlets-jruby"/>
   <classpathentry kind="src" path="/sip-servlets-client"/>
   <classpathentry kind="src" path="/sip-servlets-annotations"/>
+  <classpathentry kind="var" path="M2_REPO/org/mobicents/commons/commons-congestion/7.0.2.GA-TelScale/commons-congestion-7.0.2.GA-TelScale.jar"/>
+  <classpathentry kind="var" path="M2_REPO/javolution/javolution/5.5.1/javolution-5.5.1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/slf4j/slf4j-log4j12/1.5.5/slf4j-log4j12-1.5.5.jar"/>
+  <classpathentry kind="var" path="M2_REPO/log4j/log4j/1.2.14/log4j-1.2.14.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/telscale/licensing/lce-core/1.0.4.Final/lce-core-1.0.4.Final-obfuscated.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/googlecode/json-simple/json-simple/1.1/json-simple-1.1.jar"/>
   <classpathentry kind="src" path="/sip-servlets-as7"/>
-  <classpathentry kind="var" path="M2_REPO/org/mobicents/javax/sip/mobicents-jain-sip-ext/1.3.0-SNAPSHOT/mobicents-jain-sip-ext-1.3.0-SNAPSHOT.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/mobicents/javax/sip/mobicents-jain-sip-ext/7.0.2.GA-TelScale/mobicents-jain-sip-ext-7.0.2.GA-TelScale.jar"/>
   <classpathentry kind="var" path="M2_REPO/dnsjava/dnsjava/2.0.6/dnsjava-2.0.6.jar"/>
   <classpathentry kind="var" path="M2_REPO/net/java/stun4j/stun4j/1.0.MOBICENTS/stun4j-1.0.MOBICENTS.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/mobicents/ha/javax/sip/mobicents-jain-sip-ha-core/1.5.0-SNAPSHOT/mobicents-jain-sip-ha-core-1.5.0-SNAPSHOT.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/mobicents/ha/javax/sip/mobicents-jain-sip-ha-core/7.0.2.GA-TelScale/mobicents-jain-sip-ha-core-7.0.2.GA-TelScale.jar"/>
   <classpathentry kind="src" path="/sip-servlets-application-router"/>
-  <classpathentry kind="var" path="M2_REPO/log4j/log4j/1.2.14/log4j-1.2.14.jar"/>
   <classpathentry kind="var" path="M2_REPO/junit/junit/3.8.1/junit-3.8.1.jar"/>
 </classpath>
