--- a/containers/sip-servlets-as7/.classpath
+++ b/containers/sip-servlets-as7/.classpath
@@ -4,19 +4,11 @@
   <classpathentry kind="output" path="target/classes"/>
   <classpathentry kind="var" path="M2_REPO/javax/validation/validation-api/1.0.0.GA/validation-api-1.0.0.GA.jar"/>
   <classpathentry kind="var" path="M2_REPO/javax/transaction/jta/1.1/jta-1.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/javax/sip/jain-sip-api/1.2.0/jain-sip-api-1.2.0.jar" sourcepath="M2_REPO/javax/sip/jain-sip-api/1.2.0/jain-sip-api-1.2.0-sources.jar">
-    <attributes>
-      <attribute value="jar:file:/home/jean/.m2/repository/javax/sip/jain-sip-api/1.2.0/jain-sip-api-1.2.0-javadoc.jar!/" name="javadoc_location"/>
-    </attributes>
-  </classpathentry>
-  <classpathentry kind="var" path="M2_REPO/javax/sip/jain-sip-ri/1.2.X-SNAPSHOT/jain-sip-ri-1.2.X-SNAPSHOT.jar" sourcepath="M2_REPO/javax/sip/jain-sip-ri/1.2.X-SNAPSHOT/jain-sip-ri-1.2.X-SNAPSHOT-sources.jar">
-    <attributes>
-      <attribute value="jar:file:/home/jean/.m2/repository/javax/sip/jain-sip-ri/1.2.X-SNAPSHOT/jain-sip-ri-1.2.X-SNAPSHOT-javadoc.jar!/" name="javadoc_location"/>
-    </attributes>
-  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/javax/sip/jain-sip-api/1.2.0/jain-sip-api-1.2.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/javax/sip/jain-sip-ri/7.0.2.GA-TelScale/jain-sip-ri-7.0.2.GA-TelScale.jar"/>
   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
   <classpathentry kind="var" path="M2_REPO/javax/javaee-web-api/6.0/javaee-web-api-6.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/jboss/web/jbossweb/7.2.0.Final/jbossweb-7.2.0.Final.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/jboss/web/jbossweb/7.3.0.Final/jbossweb-7.3.0.Final.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/jboss/xnio/xnio-api/1.2.1.GA/xnio-api-1.2.1.GA.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/jboss/logging/jboss-logging/3.1.2.GA/jboss-logging-3.1.2.GA.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/jboss/as/jboss-as-web/7.2.0.Final/jboss-as-web-7.2.0.Final.jar"/>
@@ -44,7 +36,7 @@
   <classpathentry kind="var" path="M2_REPO/org/jboss/as/jboss-as-process-controller/7.2.0.Final/jboss-as-process-controller-7.2.0.Final.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/jboss/as/jboss-as-version/7.2.0.Final/jboss-as-version-7.2.0.Final.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/jboss/logmanager/jboss-logmanager/1.0.0.GA/jboss-logmanager-1.0.0.GA.jar"/>
-  <classpathentry kind="lib" path="/home/jean/java/jdk1.6.0_43/lib/tools.jar"/>
+  <classpathentry kind="lib" path="/usr/lib/jvm/java-7-openjdk-amd64/lib/tools.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/jboss/as/jboss-as-remoting/7.2.0.Final/jboss-as-remoting-7.2.0.Final.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/jboss/as/jboss-as-network/7.2.0.Final/jboss-as-network-7.2.0.Final.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/jboss/jandex/1.0.3.Final/jandex-1.0.3.Final.jar"/>
@@ -115,13 +107,14 @@
   <classpathentry kind="src" path="/sip-servlets-jruby"/>
   <classpathentry kind="src" path="/sip-servlets-client"/>
   <classpathentry kind="src" path="/sip-servlets-annotations"/>
-  <classpathentry kind="var" path="M2_REPO/log4j/log4j/1.2.16/log4j-1.2.16.jar" sourcepath="M2_REPO/log4j/log4j/1.2.16/log4j-1.2.16-sources.jar">
-    <attributes>
-      <attribute value="jar:file:/home/jean/.m2/repository/log4j/log4j/1.2.16/log4j-1.2.16-javadoc.jar!/" name="javadoc_location"/>
-    </attributes>
-  </classpathentry>
-  <classpathentry kind="var" path="M2_REPO/org/mobicents/ha/javax/sip/mobicents-jain-sip-ha-core/1.5.0-SNAPSHOT/mobicents-jain-sip-ha-core-1.5.0-SNAPSHOT.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/mobicents/javax/sip/mobicents-jain-sip-ext/1.3.0-SNAPSHOT/mobicents-jain-sip-ext-1.3.0-SNAPSHOT.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/mobicents/commons/commons-congestion/7.0.2.GA-TelScale/commons-congestion-7.0.2.GA-TelScale.jar"/>
+  <classpathentry kind="var" path="M2_REPO/javolution/javolution/5.5.1/javolution-5.5.1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/slf4j/slf4j-log4j12/1.5.5/slf4j-log4j12-1.5.5.jar"/>
+  <classpathentry kind="var" path="M2_REPO/log4j/log4j/1.2.16/log4j-1.2.16.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/telscale/licensing/lce-core/1.0.4.Final/lce-core-1.0.4.Final-obfuscated.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/googlecode/json-simple/json-simple/1.1/json-simple-1.1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/mobicents/ha/javax/sip/mobicents-jain-sip-ha-core/7.0.2.GA-TelScale/mobicents-jain-sip-ha-core-7.0.2.GA-TelScale.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/mobicents/javax/sip/mobicents-jain-sip-ext/7.0.2.GA-TelScale/mobicents-jain-sip-ext-7.0.2.GA-TelScale.jar"/>
   <classpathentry kind="var" path="M2_REPO/net/java/stun4j/stun4j/1.0.MOBICENTS/stun4j-1.0.MOBICENTS.jar"/>
   <classpathentry kind="var" path="M2_REPO/junit/junit/3.8.1/junit-3.8.1.jar"/>
 </classpath>
