--- a/sip-servlets-examples/websocket-b2bua/websocket-dar.properties
+++ b/sip-servlets-examples/websocket-b2bua/websocket-dar.properties
@@ -1,3 +1,4 @@
 OPTIONS: ("WebsocketSample", "DAR:From", "ORIGINATING", "", "NO_ROUTE", "0")
 REGISTER: ("WebsocketSample", "DAR:From", "ORIGINATING", "", "NO_ROUTE", "0")
 INVITE: ("WebsocketSample", "DAR:From", "ORIGINATING", "", "NO_ROUTE", "0")
+MESSAGE: ("WebsocketSample", "DAR:From", "ORIGINATING", "", "NO_ROUTE", "0")
