--- a/sip-servlets-examples/diameter-event-charging/pom.xml
+++ b/sip-servlets-examples/diameter-event-charging/pom.xml
@@ -3,25 +3,25 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip.examples</groupId>
 		<artifactId>sip-servlets-examples-parent</artifactId>
-		<version>2.1.0-SNAPSHOT</version>
+		<version>3.0.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>diameter-event-charging</artifactId>
 	<packaging>war</packaging>
 	<name>Diameter Event Charging Sip Servlet Example</name>
 	<dependencies>
-    <dependency>
-      <groupId>org.mobicents.servers.diameter</groupId>
-      <artifactId>jdiameter-api</artifactId>
-      <version>1.5.4.1-build415</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.mobicents.servers.diameter</groupId>
-      <artifactId>mobicents-diameter-mux-jar</artifactId>
-      <version>1.3.3.FINAL</version>
-      <scope>provided</scope>
-    </dependency>    
+	    <dependency>
+	      <groupId>org.mobicents.diameter</groupId>
+	      <artifactId>jdiameter-api</artifactId>
+	      <version>1.6.0.FINAL</version>
+	      <scope>provided</scope>
+	    </dependency>  
+	    <dependency>
+	      <groupId>org.mobicents.diameter</groupId>
+	      <artifactId>mobicents-diameter-mux-jar</artifactId>
+	      <version>1.6.0.FINAL</version>
+	      <scope>provided</scope>
+	    </dependency>  
 	</dependencies>
 	<url>http://www.mobicents.org/diameter_event_charging.html</url>
 	<build>
