--- a/sip-servlets-examples/diameter-openims/pom.xml
+++ b/sip-servlets-examples/diameter-openims/pom.xml
@@ -14,17 +14,17 @@
 	
 	<dependencies>
     <dependency>
-      <groupId>org.mobicents.servers.diameter</groupId>
+      <groupId>org.mobicents.diameter</groupId>
       <artifactId>jdiameter-api</artifactId>
-      <version>1.5.4.1-build415</version>
+      <version>1.6.0.FINAL</version>
       <scope>provided</scope>
-    </dependency>
+    </dependency>  
     <dependency>
-      <groupId>org.mobicents.servers.diameter</groupId>
+      <groupId>org.mobicents.diameter</groupId>
       <artifactId>mobicents-diameter-mux-jar</artifactId>
-      <version>1.3.3.FINAL</version>
+      <version>1.6.0.FINAL</version>
       <scope>provided</scope>
-    </dependency>    
+    </dependency>  
     <dependency>
 		  <groupId>org.jboss.jbossas</groupId>
 		  <artifactId>jboss-as-system</artifactId>
