--- a/sip-servlets-examples/diameter-ro-rf/.classpath
+++ b/sip-servlets-examples/diameter-ro-rf/.classpath
@@ -6,8 +6,8 @@
   <classpathentry kind="var" path="M2_REPO/javax/transaction/jta/1.1/jta-1.1.jar"/>
   <classpathentry kind="var" path="M2_REPO/javax/servlet/servlet-api/2.5/servlet-api-2.5.jar"/>
   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
-  <classpathentry kind="var" path="M2_REPO/org/mobicents/servers/diameter/jdiameter-api/1.5.4.1-build415/jdiameter-api-1.5.4.1-build415.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/mobicents/servers/diameter/mobicents-diameter-mux-jar/1.3.3.FINAL/mobicents-diameter-mux-jar-1.3.3.FINAL.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/mobicents/diameter/jdiameter-api/1.6.0.FINAL/jdiameter-api-1.6.0.FINAL.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/mobicents/diameter/mobicents-diameter-mux-jar/1.6.0.FINAL/mobicents-diameter-mux-jar-1.6.0.FINAL.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/jboss/jbossas/jboss-as-system-jmx/5.1.0.GA/jboss-as-system-jmx-5.1.0.GA.jar"/>
   <classpathentry kind="var" path="M2_REPO/apache-xerces/xml-apis/2.9.1/xml-apis-2.9.1.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/jboss/logging/jboss-logging-spi/2.1.0.GA/jboss-logging-spi-2.1.0.GA.jar"/>
@@ -46,7 +46,7 @@
   <classpathentry kind="var" path="M2_REPO/org/apache/ant/ant-launcher/1.7.1/ant-launcher-1.7.1.jar"/>
   <classpathentry kind="var" path="M2_REPO/qdox/qdox/1.6.1/qdox-1.6.1.jar"/>
   <classpathentry kind="var" path="M2_REPO/trove/trove/1.0.2/trove-1.0.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/log4j/log4j/1.2.14/log4j-1.2.14.jar"/>
+  <classpathentry kind="var" path="M2_REPO/log4j/log4j/1.2.17/log4j-1.2.17.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/jboss/logging/jboss-logging-log4j/2.1.0.GA/jboss-logging-log4j-2.1.0.GA.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/jboss/integration/jboss-profileservice-spi/5.1.0.GA/jboss-profileservice-spi-5.1.0.GA.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/jboss/microcontainer/jboss-aop-mc-int/2.0.6.GA/jboss-aop-mc-int-2.0.6.GA.jar"/>
@@ -63,24 +63,32 @@
   <classpathentry kind="var" path="M2_REPO/org/jboss/naming/jnp-client/5.0.3.GA/jnp-client-5.0.3.GA.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/jboss/security/jbosssx-client/2.0.3.SP1/jbosssx-client-2.0.3.SP1.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/jboss/security/jboss-security-spi/2.0.3.SP1/jboss-security-spi-2.0.3.SP1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/mobicents/servers/diameter/jdiameter-impl/1.5.4.1-build415/jdiameter-impl-1.5.4.1-build415.jar"/>
-  <classpathentry kind="var" path="M2_REPO/picocontainer/picocontainer/1.2/picocontainer-1.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/xml-apis/xml-apis/1.0.b2/xml-apis-1.0.b2.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/mobicents/diameter/jdiameter-impl/1.6.0.FINAL/jdiameter-impl-1.6.0.FINAL.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/picocontainer/picocontainer/2.13.5/picocontainer-2.13.5.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/slf4j/slf4j-api/1.5.6/slf4j-api-1.5.6.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/slf4j/slf4j-log4j12/1.5.8/slf4j-log4j12-1.5.8.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/mobicents/servers/diameter/jdiameter-ha-api/1.0.0.BETA2/jdiameter-ha-api-1.0.0.BETA2.jar"/>
+  <classpathentry kind="var" path="M2_REPO/commons-pool/commons-pool/1.4/commons-pool-1.4.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/mobicents/protocols/sctp/sctp-impl/1.5.0.FINAL/sctp-impl-1.5.0.FINAL.jar"/>
+  <classpathentry kind="var" path="M2_REPO/javolution/javolution/5.5.1/javolution-5.5.1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/mobicents/protocols/sctp/sctp-api/1.5.0.FINAL/sctp-api-1.5.0.FINAL.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/mobicents/commons/commons/1.0.0.CR1/commons-1.0.0.CR1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/testng/testng/6.2/testng-6.2.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/beanshell/bsh/1.3.0/bsh-1.3.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/beust/jcommander/1.12/jcommander-1.12.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/yaml/snakeyaml/1.6/snakeyaml-1.6.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/mobicents/diameter/jdiameter-ha-api/1.6.0.FINAL/jdiameter-ha-api-1.6.0.FINAL.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/jboss/cluster/jboss-ha-server-cache-jbc/2.0.0.GA/jboss-ha-server-cache-jbc-2.0.0.GA.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/jboss/cluster/jboss-ha-server-api/1.1.1.GA/jboss-ha-server-api-1.1.1.GA.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/jboss/cluster/jboss-ha-server-cache-spi/2.0.0.GA/jboss-ha-server-cache-spi-2.0.0.GA.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/jboss/metadata/jboss-metadata/1.0.1.GA/jboss-metadata-1.0.1.GA.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/jboss/javaee/jboss-transaction-api/1.0.1.GA/jboss-transaction-api-1.0.1.GA.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/mobicents/cluster/timers/1.6/timers-1.6.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/mobicents/cluster/core/1.6/core-1.6.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/mobicents/cluster/cache/1.6/cache-1.6.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/mobicents/cluster/timers/1.14.0.FINAL/timers-1.14.0.FINAL.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/mobicents/cluster/core/1.14.0.FINAL/core-1.14.0.FINAL.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/mobicents/cluster/cache/1.14.0.FINAL/cache-1.14.0.FINAL.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/jboss/cache/jbosscache-core/3.1.0.GA/jbosscache-core-3.1.0.GA.jar"/>
   <classpathentry kind="var" path="M2_REPO/jgroups/jgroups/2.6.10.GA/jgroups-2.6.10.GA.jar"/>
   <classpathentry kind="var" path="M2_REPO/commons-logging/commons-logging/1.1.0.jboss/commons-logging-1.1.0.jboss.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/mobicents/servers/diameter/jdiameter-ha-impl/1.0.0.BETA2/jdiameter-ha-impl-1.0.0.BETA2.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/mobicents/diameter/jdiameter-ha-impl/1.6.0.FINAL/jdiameter-ha-impl-1.6.0.FINAL.jar"/>
   <classpathentry kind="var" path="M2_REPO/commons-logging/commons-logging-api/1.0.4/commons-logging-api-1.0.4.jar"/>
   <classpathentry kind="src" path="/sip-servlets-spec"/>
   <classpathentry kind="src" path="/sip-servlets-client"/>
