--- a/sip-servlets-examples/diameter-ro-rf/pom.xml
+++ b/sip-servlets-examples/diameter-ro-rf/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip.examples</groupId>
 		<artifactId>sip-servlets-examples-parent</artifactId>
-		<version>2.1.0-SNAPSHOT</version>
+		<version>3.0.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>diameter-ro-rf</artifactId>
@@ -13,15 +13,15 @@
 	
   <dependencies>  
     <dependency>
-      <groupId>org.mobicents.servers.diameter</groupId>
+      <groupId>org.mobicents.diameter</groupId>
       <artifactId>jdiameter-api</artifactId>
-      <version>1.5.4.1-build415</version>
+      <version>1.6.0.FINAL</version>
       <scope>provided</scope>
     </dependency>  
     <dependency>
-      <groupId>org.mobicents.servers.diameter</groupId>
+      <groupId>org.mobicents.diameter</groupId>
       <artifactId>mobicents-diameter-mux-jar</artifactId>
-      <version>1.3.3.FINAL</version>
+      <version>1.6.0.FINAL</version>
       <scope>provided</scope>
     </dependency>  
   </dependencies>
