--- a/sip-servlets-spec/pom.xml
+++ b/sip-servlets-spec/pom.xml
@@ -60,59 +60,6 @@
 				</plugins>
 			</build>
 		</profile>		
-		<profile>		
-			<id>jboss</id>			
-			<build>			
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-antrun-plugin</artifactId>
-						<version>1.1</version>
-						<executions>
-							<execution>
-								<phase>package</phase>
-								<configuration>
-									<tasks>
-										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${env.JBOSS_HOME}/client/" />
-										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${env.JBOSS_HOME}/server/${node}/deploy/jboss-web.deployer/" />
-									</tasks>
-								</configuration>
-								<goals>
-									<goal>run</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>		
-			<id>jboss-5</id>			
-			<build>			
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-antrun-plugin</artifactId>
-						<version>1.1</version>
-						<executions>
-							<execution>
-								<phase>package</phase>
-								<configuration>
-									<tasks>
-										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${env.JBOSS_HOME}/client/" />
-										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${env.JBOSS_HOME}/server/${node}/deploy/jbossweb.sar/" />
-										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${env.JBOSS_HOME}/server/${node}/deployers/jbossweb.deployer/" />
-									</tasks>
-								</configuration>
-								<goals>
-									<goal>run</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
 		<profile>			
 			<id>tomcat-distro</id>
 			<activation>
@@ -141,8 +88,11 @@
 				</plugins>
 			</build>
 		</profile>		
-		<profile>		
-			<id>jboss-distro</id>			
+		<profile>			
+			<id>tomcat-8</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>			
 			<build>			
 				<plugins>
 					<plugin>
@@ -154,8 +104,8 @@
 								<phase>package</phase>
 								<configuration>
 									<tasks>
-										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${JBOSS_HOME}/client/" />
-										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${JBOSS_HOME}/server/${node}/deploy/jboss-web.deployer/" />
+										<echo message="${env.CATALINA_HOME}" />
+										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${env.CATALINA_HOME}/lib" />
 									</tasks>
 								</configuration>
 								<goals>
@@ -166,9 +116,12 @@
 					</plugin>
 				</plugins>
 			</build>
-		</profile>
-		<profile>		
-			<id>jboss-5-distro</id>			
+		</profile>		
+		<profile>			
+			<id>tomcat-8-distro</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>			
 			<build>			
 				<plugins>
 					<plugin>
@@ -180,9 +133,7 @@
 								<phase>package</phase>
 								<configuration>
 									<tasks>
-										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${JBOSS_HOME}/client/" />
-										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${JBOSS_HOME}/server/${node}/deploy/jbossweb.sar/" />
-										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${JBOSS_HOME}/server/${node}/deployers/jbossweb.deployer/" />
+										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${CATALINA_HOME}/lib" />
 									</tasks>
 								</configuration>
 								<goals>
@@ -193,6 +144,6 @@
 					</plugin>
 				</plugins>
 			</build>
-		</profile>
+		</profile>	
 	</profiles>
 </project>
