--- a/containers/sip-servlets-as8-drop-in/jboss-as-mobicents/pom.xml
+++ b/containers/sip-servlets-as8-drop-in/jboss-as-mobicents/pom.xml
@@ -53,6 +53,17 @@
                     </compilerArgument>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifestEntries>
+                            <Dependencies>org.mobicents.libs,io.undertow.servlet</Dependencies>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin> 
         </plugins>
     </build>
 
