--- a/containers/sip-servlets-as8-drop-in/build-mobicents-modules/build.xml
+++ b/containers/sip-servlets-as8-drop-in/build-mobicents-modules/build.xml
@@ -51,11 +51,11 @@
             <maven-resource group="org.mobicents.servlet.sip" artifact="sip-servlets-annotations"/>
             <maven-resource group="org.mobicents.servlet.sip" artifact="sip-servlets-client"/>
         </module-def>
-
         <module-def name="org.mobicents.libs">
             <maven-resource group="org.mobicents.servlet.sip.containers" artifact="sip-servlets-as8"/>
 	    <maven-resource group="org.mobicents.servlet.sip" artifact="sip-servlets-core-api"/>
             <maven-resource group="org.mobicents.servlet.sip" artifact="sip-servlets-impl"/>
+            <maven-resource group="org.mobicents.servlet.sip" artifact="sip-servlets-jruby"/>
             <maven-resource group="javax.sip" artifact="jain-sip-api"/>
             <maven-resource group="org.mobicents.javax.sip" artifact="mobicents-jain-sip-ext"/>
             <maven-resource group="javax.sip" artifact="jain-sip-ri"/>
