--- a/containers/sip-servlets-as8-examples/pom.xml
+++ b/containers/sip-servlets-as8-examples/pom.xml
@@ -7,9 +7,9 @@
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 	<groupId>org.mobicents.servlet.sip.containers</groupId>
-	<artifactId>sip-servlets-as8</artifactId>
+	<artifactId>sip-servlets-as8-examples</artifactId>
 	<packaging>jar</packaging>
-	<name>Mobicents Sip Servlets AS8 Abstract Layer</name>
+	<name>Mobicents Sip Servlets AS8 Abstract Layer Examples</name>
 	<url>http://www.mobicents.org/products_sip_servlets.html</url>
 	<dependencies>
 		<!-- dependency>
@@ -75,9 +75,14 @@
 
 		<!-- sip servlets dependency -->
 		<dependency>
+			<groupId>org.mobicents.servlet.sip.containers</groupId>
+			<artifactId>sip-servlets-as8</artifactId>
+			<version>3.0.0-SNAPSHOT</version>	
+		</dependency>		
+		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
-			<version>3.0.0-SNAPSHOT</version>			
+			<version>3.0.0-SNAPSHOT</version>	
 		</dependency>
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
@@ -161,17 +166,6 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin> 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <configuration>
-                    <archive>
-                        <manifestEntries>
-                            <Dependencies>org.mobicents.as8,io.undertow.servlet</Dependencies>
-                        </manifestEntries>
-                    </archive>
-                </configuration>
-            </plugin> 
 			<plugin>
 				<artifactId>maven-eclipse-plugin</artifactId>
    				<groupId>org.mobicents.tools</groupId>
@@ -183,7 +177,7 @@
 					</classpathExcludes-->
 					<generateProjectsForModules>true</generateProjectsForModules>	
 					<resolveTransitiveDependencies>true</resolveTransitiveDependencies>
-					<eclipseProjectName>sip-servlets-as8</eclipseProjectName>
+					<eclipseProjectName>sip-servlets-as7</eclipseProjectName>
 				</configuration>
 			</plugin>
 			<!--plugin>
