--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,6 @@ docs/sources-telscale/src/
 sip-servlets-test-suite/applications/timers-sip-servlet/.project
 *.project
 *.classpath
+containers/sip-servlets-as8/pom másolata.xml
+containers/sip-servlets-as8-drop-in/build-mobicents-modules/pom másolata.xml
+containers/sip-servlets-as8-drop-in/jboss-as-mobicents/pom másolata.xml
